# AmirNavon_US_Accidents

./: .gitignore  ML Final Presentation.pptx  README.md  df_smote.pkl  link_to_google_DRIVE.txt  pyproject.toml  test_df.pkl
