[tool.poetry]
name = "amirnavon-us-accidents"
version = "0.1.0"
description = ""
authors = ["Amir Navon <amirnavon3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdown = "^5.2.0"
pathlib = "^1.0.1"
pandas = "^2.2.2"
datetime = "^5.5"
ipykernel = "^6.29.5"
openpyxl = "^3.1.5"
autoviz = "^0.1.905"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
